apps/foundry-vtt-mll/base/foundry-vtt-mll_IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-mll-ingress
  namespace: foundry-vtt-mll
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`night.sakagegaming.com`) 
      services:
        - kind: Service
          name: foundry-vtt-mll
          passHostHeader: true
          port: 80
